Permit access for test stuff that requires reflection